applications/traefik/overlays/use1/api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-apiserver
  namespace: default
spec:
  entryPoints:
    - kube-apiserver
  routes:
    - match: Host(`api-use1.vng.bet`)
      kind: Rule
      services:
        - name: kubernetes
          port: 443
  tls:
    passthrough: true
