applications/traefik/overlays/use1/api-use1.vng.bet.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kube-api
  namespace: kube-system
spec:
  entryPoints:
    - kubeapi
  routes:
    - match: HostSNI(`api-use2.vng.bet`)
      services:
        - name: kubernetes
          namespace: default
          port: 443
  tls:
    store:
      name: default
      namespace: traefik
